opam-version: "2.0"
synopsis: "Melange bindings for react-virtualized"
description: "Melange bindings for react-virtualized JavaScript library."
maintainer: [
  "Liubomyr Mykhalchenko <liubomyr.mykhalchenko@ahrefs.com>"
]
authors: [
  "Liubomyr Mykhalchenko <liubomyr.mykhalchenko@ahrefs.com>"
]
license: "MIT"
tags: ["melange" "react-js" "org:ahrefs"]
homepage: "https://github.com/ahrefs/melange-react-virtualized/"
doc: "https://github.com/ahrefs/melange-react-virtualized/"
bug-reports: "https://github.com/ahrefs/melange-react-virtualized/issues"
depends: [
  "dune" {>= "3.8"}
  "ocaml"
  "melange" {>= "2.0.0"}
  "reason" {>= "3.10.0"}
  "reason-react"
  "reason-react-ppx"
  "ocaml-lsp-server" {with-test}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ahrefs/melange-react-virtualized.git"
depexts: [
  ["react-virtualized"] {npm-version = "^9.0.2"}
]
pin-depends: [
  ["melange.dev" "git+https://github.com/melange-re/melange#d2715c469e8cf8bf8cff81b897c212094a9517c5"]
  ["reason-react.dev" "https://github.com/reasonml/reason-react/archive/1f084f4ecf380b2144809065e5935a41866eab3f.tar.gz"]
  ["reason-react-ppx.dev" "https://github.com/reasonml/reason-react/archive/1f084f4ecf380b2144809065e5935a41866eab3f.tar.gz"]
]
